--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   },
   "name": "nspclient",
   "description": "华为网盘SDK,用于调用华为网盘开放平台服务",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "homepage": "http://open.dbank.com",
   "repository": {
-    "url": "git://github.com/louieli/nspclient.git"
+      "type": "git",
+      "url": "git://github.com/louieli/nspclient.git"
   },
   "main": "nspclient.js",
   "dependencies": {
